--- a/Project-login/cvWebApplication/cvWebApplication/cvWebApplication.csproj
+++ b/Project-login/cvWebApplication/cvWebApplication/cvWebApplication.csproj
@@ -396,6 +396,7 @@
     <Content Include="Views\Users\Details.cshtml" />
     <Content Include="Views\Users\Edit.cshtml" />
     <Content Include="Views\Users\Index.cshtml" />
+    <Content Include="Views\Shared\_LoginPartialCollapse.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
